--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,21 +1,21 @@
 /* Must be loaded before everything else */
-@import "normalize";
-@import "prism";
-@import "flag-icons";
+@import 'normalize';
+@import 'prism';
+@import 'flag-icons';
 
 /* Main stuff */
-@import "variables";
-@import "mixins";
-@import "fonts";
-@import "buttons";
+@import 'variables';
+@import 'mixins';
+@import 'fonts';
+@import 'buttons';
 /* Modules */
-@import "header";
-@import "logo";
-@import "menu";
-@import "main";
-@import "list";
-@import "single";
-@import "footer";
-@import "sharing-buttons";
-@import "tables";
-@import "404";
+@import 'header';
+@import 'logo';
+@import 'menu';
+@import 'main';
+@import 'list';
+@import 'single';
+@import 'footer';
+@import 'sharing-buttons';
+@import 'tables';
+@import '404';
