--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,20 +1,17 @@
 <nav class="menu">
     <ul class="menu__inner">
-        {{- $currentPage := . -}}
-        {{ range .Site.Menus.main -}}
-            <li><a href="{{ .URL | relLangURL }}">{{ .Name }}</a></li>
-        {{- end }}
-
-        {{- if .Site.Params.EnableGlobalLanguageMenu }}
+        {{- $currentPage := . -}} {{ range .Site.Menus.main -}}
+        <li><a href="{{ .URL | relLangURL }}">{{ .Name }}</a></li>
+        {{- end }} {{- if .Site.Params.EnableGlobalLanguageMenu }}
         <div class="submenu">
             <li class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">{{ .Language }}</a>
                 <div class="dropdown-content">
-                    {{ if .Site.IsMultiLingual }}
-                        {{ range $.Translations }}
-                            <a title="{{ .Language }}" href="{{ .Permalink }}">{{ .Language }}</a>
-                        {{ end }}
-                    {{ end }}
+                    {{ if .Site.IsMultiLingual }} {{ range $.Translations }}
+                    <a title="{{ .Language }}" href="{{ .Permalink }}"
+                        >{{ .Language }}</a
+                    >
+                    {{ end }} {{ end }}
                 </div>
             </li>
         </div>
