--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -156,7 +156,7 @@
     <hr />
     <div class="sharing-buttons">{{ partial "sharing-buttons.html" . }}</div>
     {{- end }} {{ partial "pagination-single.html" . }} {{ if
-    .Site.DisqusShortname }} {{ if not (eq .Params.Comments "false") }}
+    .Site.Config.Services.Disqus.Shortname }} {{ if not (eq .Params.Comments "false") }}
     <div id="comments">{{ template "_internal/disqus.html" . }}</div>
     {{ end }} {{ end }} {{ if .Site.Params.Commento.Url }}
     <script defer src="{{ .Site.Params.Commento.Url }}"></script>
